src/bin_client/test/contracts/ill_typed/push_never.tz
parameter unit;
storage unit;
code { PUSH never {} ; NEVER }
